--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -68,8 +68,8 @@
         .bodyContent{
             display: flex;
             flex-direction: column;
-            height: 10rem;
-            width: 50rem;
+            height: auto;
+            width: 100%;
             justify-content: space-evenly;
             align-items: center;
             text-align: center;
