--- a/masai-investors.html
+++ b/masai-investors.html
@@ -11,6 +11,7 @@
                 width: 100vw;
             }
             #parent{
+                /* border: 1px solid yellow; */
                 display: flex;
                 flex-direction:column;
                 justify-content: center;
@@ -58,7 +59,6 @@
                 margin-top: 2%;
                 padding-bottom: 2%;
                 height: 380px;
-                /* border: 1px solid black; */
             }
         </style>
     </head>
